<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.intro.FinishFragment"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/fin_screen4_h"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/fin_msg_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/id_fin_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:tint="@color/colorPrimaryLight"
        android:layout_gravity="center"
        android:src="@drawable/ic_notifications_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fin_msg_2"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:alpha="0.5"/>
        <Button
            android:id="@+id/id_fin_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/fin_btn"
            android:background="@color/colorPrimaryLight"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#fff" />
    </LinearLayout>
</FrameLayout>