<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.vibration.VibrationGenFragment">

    <View
        android:id="@+id/vib_gen_background_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000"
        android:clickable="true"
        android:focusable="true"/>

    <LinearLayout
        android:id="@+id/vib_gen_canvas_holder"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_white"
            card_view:contentPaddingRight="15dp"
            card_view:contentPaddingLeft="15dp"
            card_view:contentPaddingBottom="0dp"
            card_view:contentPaddingTop="0dp"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vib_gen_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vib_gen_custom_name_placeholder"
                android:maxLines="1"
                android:maxLength="20"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_white"
            card_view:cardElevation="24dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/vib_gen_press_to_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vib_gen_press_to_start"/>
            <com.tzgames.ringer.views.GeneratorView
                android:id="@+id/vib_gen_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_white"
            card_view:contentPaddingRight="10dp"
            card_view:contentPaddingLeft="10dp"
            card_view:contentPaddingBottom="0dp"
            card_view:contentPaddingTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vib_gen_timestamps_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vib_gen_custom_pattern_placeholder"
                android:layout_gravity="start"
                android:maxLines="3"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vib_gen_play_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="272dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="@+id/vib_gen_canvas_holder"
        app:layout_constraintEnd_toEndOf="@+id/vib_gen_canvas_holder"
        app:layout_constraintStart_toEndOf="@+id/vib_gen_canvas_holder"
        android:background="@color/colorPrimaryLight"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimaryLight"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp"
        android:scaleX="0"
        android:scaleY="0"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>